--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="MAPBOX_ACCESS_TOKEN">pk.eyJ1IjoicmRhczYzMTMiLCJhIjoiY2pxMG9pMTMzMHAxcDQydWwweXc2djllcSJ9.bJVIJLtBf6Yr3NN27DxCCQ</string>
 </resources>
