--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="CHAT_MSG">msg</string>
     <string name="CHAT_TIMESTAMP">timestamp</string>
     <string name="CHAT_DATA">chat_data</string>
+    <string name="CHAT_USER_NAME">chat_user_name</string>
 </resources>
