--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="USER_THREADS">user_threads/</string>
     <string name="RECEIVER_NAME">receiver_name</string>
     <string name="TOOLBAR_TITLE">Recent Connections</string>
+    <string name="CHAT_SEEN">seen</string>
 </resources>
