--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,6 @@
     <string name="No_INTERNET_MSG">Turn on your internet and restart the app</string>
     <string name="LOCATION_SEARCH_MSG">Please wait for a moment.Searching your location</string>
     <string name="neighbour_search_msg">Searching your neighbours</string>
+    <string name="GPS_ON_MSG">You need to turn on your gps,so that we can locate you.</string>
+    <string name="GPS_ON_POS_BTN">Let\'s turn it on</string>
 </resources>
